// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Responsibility can render a disable select 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="responsibility"
            name="responsibility"
            data-trackable="responsibility"
            aria-required="true"
            required
            disabled
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="ACC">
        Accounting
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="ANL">
        Analyst
      </option>
      <option value="ART">
        Arts &amp; design
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="COM">
        Community &amp; social services
      </option>
      <option value="COS">
        Consulting
      </option>
      <option value="RAD">
        Data &amp; Analytics
      </option>
      <option value="ENG">
        Engineering
      </option>
      <option value="ESG">
        ESG (Env’tl, Social &amp; Corp. Governance)
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="FAC">
        Facilities
      </option>
      <option value="FIN">
        Finance
      </option>
      <option value="FNC">
        Finance
      </option>
      <option value="IFA">
        Financial Advisor
      </option>
      <option value="FUM">
        Fund management
      </option>
      <option value="CON">
        General management
      </option>
      <option value="HEA">
        Healthcare services
      </option>
      <option value="PAT">
        Human resources
      </option>
      <option value="HUM">
        Human resources
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="PRI">
        Investments
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="KNO">
        Knowledge &amp; information management
      </option>
      <option value="LEA">
        Learning &amp; Development
      </option>
      <option value="LEG">
        Legal
      </option>
      <option value="LGL">
        Legal
      </option>
      <option value="MKT">
        Marketing
      </option>
      <option value="MAR">
        Marketing
      </option>
      <option value="MED">
        Media &amp; communication
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="POL">
        Policy making
      </option>
      <option value="MON">
        Portfolio management
      </option>
      <option value="PRO">
        Product management
      </option>
      <option value="PMN">
        Program and project management
      </option>
      <option value="BUY">
        Purchasing &amp; procurement
      </option>
      <option value="QUA">
        Quantitative Analysis
      </option>
      <option value="REA">
        Real Estate
      </option>
      <option value="RSR">
        Research
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk &amp; compliance
      </option>
      <option value="SAL">
        Sales &amp; business development
      </option>
      <option value="CPL">
        Strategy
      </option>
      <option value="STU">
        Student
      </option>
      <option value="SUP">
        Support
      </option>
      <option value="TEA">
        Teaching &amp; training
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;

exports[`Responsibility can render an error message 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select o-forms-input--invalid">
    <select id="responsibility"
            name="responsibility"
            data-trackable="responsibility"
            aria-required="true"
            required
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="ACC">
        Accounting
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="ANL">
        Analyst
      </option>
      <option value="ART">
        Arts &amp; design
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="COM">
        Community &amp; social services
      </option>
      <option value="COS">
        Consulting
      </option>
      <option value="RAD">
        Data &amp; Analytics
      </option>
      <option value="ENG">
        Engineering
      </option>
      <option value="ESG">
        ESG (Env’tl, Social &amp; Corp. Governance)
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="FAC">
        Facilities
      </option>
      <option value="FIN">
        Finance
      </option>
      <option value="FNC">
        Finance
      </option>
      <option value="IFA">
        Financial Advisor
      </option>
      <option value="FUM">
        Fund management
      </option>
      <option value="CON">
        General management
      </option>
      <option value="HEA">
        Healthcare services
      </option>
      <option value="PAT">
        Human resources
      </option>
      <option value="HUM">
        Human resources
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="PRI">
        Investments
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="KNO">
        Knowledge &amp; information management
      </option>
      <option value="LEA">
        Learning &amp; Development
      </option>
      <option value="LEG">
        Legal
      </option>
      <option value="LGL">
        Legal
      </option>
      <option value="MKT">
        Marketing
      </option>
      <option value="MAR">
        Marketing
      </option>
      <option value="MED">
        Media &amp; communication
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="POL">
        Policy making
      </option>
      <option value="MON">
        Portfolio management
      </option>
      <option value="PRO">
        Product management
      </option>
      <option value="PMN">
        Program and project management
      </option>
      <option value="BUY">
        Purchasing &amp; procurement
      </option>
      <option value="QUA">
        Quantitative Analysis
      </option>
      <option value="REA">
        Real Estate
      </option>
      <option value="RSR">
        Research
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk &amp; compliance
      </option>
      <option value="SAL">
        Sales &amp; business development
      </option>
      <option value="CPL">
        Strategy
      </option>
      <option value="STU">
        Student
      </option>
      <option value="SUP">
        Support
      </option>
      <option value="TEA">
        Teaching &amp; training
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;

exports[`Responsibility can render an initial selected value 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="responsibility"
            name="responsibility"
            data-trackable="responsibility"
            aria-required="true"
            required
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="ACC">
        Accounting
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="ANL">
        Analyst
      </option>
      <option value="ART">
        Arts &amp; design
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="COM">
        Community &amp; social services
      </option>
      <option value="COS">
        Consulting
      </option>
      <option value="RAD">
        Data &amp; Analytics
      </option>
      <option value="ENG">
        Engineering
      </option>
      <option value="ESG">
        ESG (Env’tl, Social &amp; Corp. Governance)
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="FAC">
        Facilities
      </option>
      <option selected
              value="FIN"
      >
        Finance
      </option>
      <option value="FNC">
        Finance
      </option>
      <option value="IFA">
        Financial Advisor
      </option>
      <option value="FUM">
        Fund management
      </option>
      <option value="CON">
        General management
      </option>
      <option value="HEA">
        Healthcare services
      </option>
      <option value="PAT">
        Human resources
      </option>
      <option value="HUM">
        Human resources
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="PRI">
        Investments
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="KNO">
        Knowledge &amp; information management
      </option>
      <option value="LEA">
        Learning &amp; Development
      </option>
      <option value="LEG">
        Legal
      </option>
      <option value="LGL">
        Legal
      </option>
      <option value="MKT">
        Marketing
      </option>
      <option value="MAR">
        Marketing
      </option>
      <option value="MED">
        Media &amp; communication
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="POL">
        Policy making
      </option>
      <option value="MON">
        Portfolio management
      </option>
      <option value="PRO">
        Product management
      </option>
      <option value="PMN">
        Program and project management
      </option>
      <option value="BUY">
        Purchasing &amp; procurement
      </option>
      <option value="QUA">
        Quantitative Analysis
      </option>
      <option value="REA">
        Real Estate
      </option>
      <option value="RSR">
        Research
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk &amp; compliance
      </option>
      <option value="SAL">
        Sales &amp; business development
      </option>
      <option value="CPL">
        Strategy
      </option>
      <option value="STU">
        Student
      </option>
      <option value="SUP">
        Support
      </option>
      <option value="TEA">
        Teaching &amp; training
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;

exports[`Responsibility render a select with a label 1`] = `
<label id="responsibilityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="responsibility"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Which best describes your job responsibility?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="responsibility"
            name="responsibility"
            data-trackable="responsibility"
            aria-required="true"
            required
    >
      <option value>
        Please select a job responsibility
      </option>
      <option value="ACC">
        Accounting
      </option>
      <option value="ADL">
        Administration
      </option>
      <option value="ANL">
        Analyst
      </option>
      <option value="ART">
        Arts &amp; design
      </option>
      <option value="RES">
        Broker/trader
      </option>
      <option value="COM">
        Community &amp; social services
      </option>
      <option value="COS">
        Consulting
      </option>
      <option value="RAD">
        Data &amp; Analytics
      </option>
      <option value="ENG">
        Engineering
      </option>
      <option value="ESG">
        ESG (Env’tl, Social &amp; Corp. Governance)
      </option>
      <option value="EXP">
        Export/international sales
      </option>
      <option value="FAC">
        Facilities
      </option>
      <option value="FIN">
        Finance
      </option>
      <option value="FNC">
        Finance
      </option>
      <option value="IFA">
        Financial Advisor
      </option>
      <option value="FUM">
        Fund management
      </option>
      <option value="CON">
        General management
      </option>
      <option value="HEA">
        Healthcare services
      </option>
      <option value="PAT">
        Human resources
      </option>
      <option value="HUM">
        Human resources
      </option>
      <option value="TEC">
        Information technology
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="PRI">
        Investments
      </option>
      <option value="ITC">
        IT/computing
      </option>
      <option value="KNO">
        Knowledge &amp; information management
      </option>
      <option value="LEA">
        Learning &amp; Development
      </option>
      <option value="LEG">
        Legal
      </option>
      <option value="LGL">
        Legal
      </option>
      <option value="MKT">
        Marketing
      </option>
      <option value="MAR">
        Marketing
      </option>
      <option value="MED">
        Media &amp; communication
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="NOT">
        Not working
      </option>
      <option value="OPS">
        Operations
      </option>
      <option value="POL">
        Policy making
      </option>
      <option value="MON">
        Portfolio management
      </option>
      <option value="PRO">
        Product management
      </option>
      <option value="PMN">
        Program and project management
      </option>
      <option value="BUY">
        Purchasing &amp; procurement
      </option>
      <option value="QUA">
        Quantitative Analysis
      </option>
      <option value="REA">
        Real Estate
      </option>
      <option value="RSR">
        Research
      </option>
      <option value="RET">
        Retired
      </option>
      <option value="RSK">
        Risk &amp; compliance
      </option>
      <option value="SAL">
        Sales &amp; business development
      </option>
      <option value="CPL">
        Strategy
      </option>
      <option value="STU">
        Student
      </option>
      <option value="SUP">
        Support
      </option>
      <option value="TEA">
        Teaching &amp; training
      </option>
      <option value="TEL">
        Telecommunications
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your responsibility
    </span>
  </span>
</label>
`;
